--- a/style.css
+++ b/style.css
@@ -380,7 +380,7 @@ template {
   font-family: "Lato";
   align-content: center;
 }
-@media (max-width: 760px) {
+@media (max-width: 756px) {
   .section-top {
     padding: 50px 0 50px;
   }
@@ -430,7 +430,7 @@ template {
     font-size: 2rem;
   }
 }
-@media (max-width: 800px) {
+@media (max-width: 756px) {
   .section-top__name {
     font-size: 1.5rem;
   }
@@ -501,30 +501,23 @@ template {
 .portfolio__items-container {
   position: relative;
   width: 100%;
-  height: 490px;
+  max-height: 800px;
   overflow: hidden;
-}
-@media (max-width: 960px) {
-  .portfolio__items-container {
-    height: 400px;
-  }
 }
 .portfolio__slider-item {
   display: none;
   position: relative;
-  height: 100%;
   animation: 0.5s ease-in-out;
 }
 .portfolio__slide-content {
-  font-family: "Lato";
-  margin: 0 20%;
+  margin: 0 10%;
   font-size: 16px;
+  font-family: "Lato";
   display: flex;
   justify-content: space-between;
 }
-@media (max-width: 960px) {
+@media (max-width: 756px) {
   .portfolio__slide-content {
-    flex-direction: column;
     align-items: center;
   }
 }
@@ -532,12 +525,18 @@ template {
   flex-direction: column;
   display: flex;
   padding: 0 30px;
-  width: 50%;
+  width: 40%;
   text-align: left;
 }
-@media (max-width: 640px) {
+@media (max-width: 756px) {
   .portfolio__project-descr {
-    display: none;
+    width: 78%;
+    height: 100%;
+    padding: 50px 1% 0;
+    position: absolute;
+    top: 0;
+    background-color: #ffffff;
+    visibility: hidden;
   }
 }
 .portfolio__slide-title {
@@ -547,9 +546,9 @@ template {
   padding-bottom: 10px;
 }
 .portfolio__project-image {
-  width: 50%;
+  width: 60%;
 }
-@media (max-width: 640px) {
+@media (max-width: 756px) {
   .portfolio__project-image {
     width: 100%;
   }
@@ -568,6 +567,39 @@ template {
   text-transform: uppercase;
   text-decoration: none;
 }
+.portfolio__button-for-descr {
+  width: 120px;
+  height: 45px;
+  padding: 10px 20px 0;
+  display: none;
+  position: absolute;
+  right: 10%;
+  top: 0;
+  text-transform: uppercase;
+  background-color: #42631e;
+  color: #fff;
+}
+@media (max-width: 756px) {
+  .portfolio__button-for-descr {
+    display: block;
+  }
+}
+.portfolio__button-for-descr::after {
+  content: "show description";
+}
+
+.description {
+  background-color: blueviolet;
+}
+.description::after {
+  content: "hide description";
+}
+
+@media (max-width: 756px) {
+  .visible {
+    visibility: visible;
+  }
+}
 
 .active,
 .next {
@@ -584,7 +616,7 @@ template {
   position: absolute;
   top: 0;
   bottom: 0;
-  width: 15%;
+  width: 10%;
   cursor: pointer;
 }
 
@@ -605,7 +637,7 @@ template {
   transform: translateY(-50%);
   font-size: 84px;
 }
-@media (max-width: 640px) {
+@media (max-width: 756px) {
   .arrow {
     display: none;
   }
